Add is favorite param to search (#7752)
* Done.

* Add finding favorite for eco news.

* Fix test.

* Add test.

* Add test.

* Fix issue.